# recipe-rest-api

./: .dockerignore  .python-version  Dockerfile  README.md  docker-compose.yml  requirements.dev.txt  requirements.txt
.github/workflows/: checks.yml
app/: .flake8  pyproject.toml
app/app/: calc.py  settings.py  tests.py
app/core/: models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_rename_is_system_user_user_is_staff.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
