[project]
name = "recipe-api-playground"
version = "0.1.0"
description = "Playground for testing the django rest api framework"
authors = [{ name = "JJ", email = "groblersales@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
extend-exclude = [
    "migrations",
    "__pycache__",
    "tests",
    "settings.py",
    "manage.py",
]
